--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -43,7 +43,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>Profile</servlet-name>
-        <url-pattern>/user-profile</url-pattern>
+        <url-pattern>/profile</url-pattern>
     </servlet-mapping>
 
     <servlet>
@@ -52,7 +52,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>Order</servlet-name>
-        <url-pattern>/user-order</url-pattern>
+        <url-pattern>/order</url-pattern>
     </servlet-mapping>
 
     <servlet>
@@ -62,6 +62,15 @@
     <servlet-mapping>
         <servlet-name>Login</servlet-name>
         <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>Comments</servlet-name>
+        <servlet-class>CommentsPageServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Comments</servlet-name>
+        <url-pattern>/comments</url-pattern>
     </servlet-mapping>
 
     <security-role>
@@ -79,7 +88,8 @@
     <security-constraint>
         <web-resource-collection>
             <web-resource-name>WebLab</web-resource-name>
-            <url-pattern>/user-profile</url-pattern>
+            <url-pattern>/profile</url-pattern>
+            <url-pattern>/order</url-pattern>
         </web-resource-collection>
         <auth-constraint>
             <role-name>user</role-name>
